@startuml diagram

Actor ..> Student
Actor ..> Training
SelectionSystem ..> Actor
Behavior ..> Student
Actor ..> Preference

class Actor{
    -preferences : map<int, Preference> 
    +get_preference(int order_preference) : Preference
    +get_preferences() : map<int,Preference> 
    +get_nb_preferences(): int
    +set_behavior(Behavior behavior) : void
    +push_grade(string id_grade, int grade) : void
    +remove_grade(int grade) : void
    +add_preference(int order_preference, Preference preference) : void
    +remove_preference(int order_preference) : void
    +switch_preferences(int order_pref_1, int order_pref_2) : void
    +remove_all_preferences() : void
}

class Student {
    -id : long
    -behavior : Behavior
    -grades : unordered_map<string, int>
    -has_training: bool
    +get_id() : long
    +get_behavior() : Behavior
    +add_grade(string id_grade, int grade) : void
    +remove_grade(string id_grade) : void
    +clear_all_grades() : void
    +get_grade(string id_grade) : int
    +get_has_training(): bool
    +set_has_training(bool status): void
}

class SelectionSystem {
    -system_name : string
    -students: map<long,Student>
    -trainings: map<string,Training>
    + gale_shapley() : map<string, long> 
    + get_system_name() : string
    + get_students(): map<long,Student>
    + get_trainings(): map<string,Training>
    + add_student(Student student): void
    + add_training(Training training): void
    + get_student(long student_id): Student
    + get_training(string training_id): Training
    + remove_student(): void
    + remove_training(): void
    + clear_all(): void
}

class Training {
    - training_name : string
    - theme : string
    - location : string
    - ranking : int
    - has_student : bool
    + get_name() : string
    + get_theme() : string
    + get_location() : string
    + get_ranking() : int
    + get_has_student: bool
}

class Preference{
    - student_id: long
    - training_name: string
    + get_student_id(): long
    + get_training_name(): string
    + set_student_id(long student_id): void
    + set_training_name(string training_name): void
}


class Behavior {
    -justified_absences : int
    -unjustified_absences : int
    -justified_delays : int
    -unjustified_delays : int
    -personal_issues : bool
    -detention_hours : int
    -reports : int
    -disciplinary_boards : int
    +get_justified_absences() : int
    +get_unjustified_absences() : int
    +get_justified_delays() : int
    +get_unjustified_delays() : int
    +get_personal_issues() : bool
    +get_detention_hours() : int
    +get_reports() : int
    +get_disciplinary_boards() : bool
    +set_justified_absences(int nb_justified_absences) : void
    +set_unjustified_absences(int nb_unjustified_absences) : void
    +set_justified_delays(int nb_justified_delays) : void
    +set_unjustified_delays(int nb_unjustified_delays) : void
    +set_personal_issues(bool has_issues) : void
    +set_detention_hours(int nb_detention_hours) : void
    +set_reports(int nb_reports) : void
    +set_disciplinary_boards(int nb_disciplinary_boards) : void
}


@enduml
